--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<version>21</version>
 	</parent>
 	<groupId>org.sourcepit.docker</groupId>
-	<artifactId>docker-watcher</artifactId>
+	<artifactId>consul-forwarder</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
