--- a/vagrant/core02-user-data.yaml
+++ b/vagrant/core02-user-data.yaml
@@ -2,7 +2,27 @@
 
 coreos:
     units:
-    -   name: consul-server.service
+    -   name: docker.service
+        drop-ins:
+        -   name: 50-insecure-registry.conf
+            content: |
+                [Service]
+                Environment=DOCKER_OPTS='--insecure-registry="docker.bosch-si.com:5000"'
+    -   name: docker-tcp.socket
+        command: start
+        enable: true
+        content: |
+            [Unit]
+            Description=Docker Socket for the API
+            
+            [Socket]
+            ListenStream=2375
+            Service=docker.service
+            BindIPv6Only=both
+            
+            [Install]
+            WantedBy=sockets.target
+    -   name: consul-agent.service
         command: start
         enable: true
         content: |
@@ -10,8 +30,8 @@ coreos:
             Requires=docker.service
             
             [Service]            
-            Environment="IMAGE_NAME=gliderlabs/consul-server"
-            Environment="CONTAINER_NAME=consul-server"
+            Environment="IMAGE_NAME=docker.bosch-si.com:5000/progrium/consul"
+            Environment="CONTAINER_NAME=consul-agent"
             
             ExecStartPre=-/usr/bin/docker stop -f ${CONTAINER_NAME}
             ExecStartPre=-/usr/bin/docker rm -f ${CONTAINER_NAME}
@@ -27,13 +47,15 @@ coreos:
                 -p $private_ipv4:8302:8302/udp \
                 -p $private_ipv4:8400:8400 \
                 -p $private_ipv4:8500:8500 \
+                -p $private_ipv4:53:53/tcp \
                 -p $private_ipv4:53:53/udp \
                 -h %H \
                 ${IMAGE_NAME} \
+                -server \
                 -data-dir /data \
+                -ui-dir /ui \
                 -advertise $private_ipv4 \
                 -bootstrap-expect 3 \
-                -retry-interval 10s \
                 -retry-join 192.168.56.101 \
                 -retry-join 192.168.56.102 \
                 -retry-join 192.168.56.103
